--- a/force-app/main/default/aura/FileUpload/FileUpload.cmp
+++ b/force-app/main/default/aura/FileUpload/FileUpload.cmp
@@ -1,15 +1,11 @@
 <aura:component implements="flexipage:availableForAllPageTypes,force:hasRecordId" controller="FileUploadController">
-    <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
-                  scripts="{!join(',', $Resource.rr_community_js)}"
+    <ltng:require scripts="{!join(',', $Resource.rr_community_js)}"
                   afterScriptsLoaded="{!c.doInit}"/>
     <!-- attributes -->
     <aura:attribute name="containsAnyFiles" type="Boolean" default="false"/>
-    <aura:attribute name="isPopupOpen" type="Boolean" default="false"/>
     <aura:attribute name="fileType" type="List" default="['.pdf', '.txt']"/>
     <aura:attribute name="recordId" type="String"/>
-    <aura:attribute name="uploadedFileId" type="String"/>
-    <aura:attribute name="listOfUploadedFiles"    type="Object[]"/>
-    <aura:attribute name="languagePickListValues" type="List"/>
+    <aura:attribute name="fileWrapper" type="Object"/>
 
     <!-- handlers: -->
     <aura:handler event="force:refreshView" action="{!c.doInit}" />
@@ -27,8 +23,8 @@
                 <div class="slds-media__body">
                     <h2 class="slds-card__header-title">
                         <a class="slds-card__header-link slds-truncate" title="Files">
-                            <span> 
-                                {!$Label.c.Files} ({!v.listOfUploadedFiles.length})
+                            <span>
+                                {!$Label.c.Files} ({!v.fileWrapper.listOfFiles.length})
                             </span>
                         </a>
                     </h2>
@@ -46,7 +42,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <aura:iteration items="{!v.listOfUploadedFiles}" var="file">
+                    <aura:iteration items="{!v.fileWrapper.listOfFiles}" var="file">
                         <tr>
                             <td><a href="" id="{!file.ContentDocument.Id}" onclick="{!c.previewFile}">{!file.ContentDocument.Title}</a></td>
                             <td>{!file.ContentDocument.FileType}</td>
@@ -58,44 +54,20 @@
                     </tbody>
                 </table>
             </div>
-
         </aura:if>
-        <footer class="slds-card__footer">
-            <lightning:fileUpload label="" multiple="false"
-                                  accept="{!v.fileType}" recordId="{!v.recordId}"
-                                  onuploadfinished="{!c.handleUpload}" />
-        </footer>
-        <aura:if isTrue="{!v.isPopupOpen}">
-            <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
-                <div class="slds-modal__container">
-                    <header class="slds-modal__header">
-                        <lightning:buttonIcon iconName="utility:close"
-                                              onclick="{!c.deleteFile}"
-                                              alternativeText="close"
-                                              variant="bare-inverse"
-                                              class="slds-modal__close"/>
-                        <h2 id="modal-heading-01" class="slds-text-heading_medium slds-hyphenate">{!$Label.c.FU_Add_File}</h2>
-                    </header>
-                    <div class="slds-modal__content slds-p-around_medium" id="modal-content-id-1">
-                        <lightning:select name="{!$Label.c.PG_AH_H_Language}" label="{!$Label.c.PG_AH_H_Language}" aura:id="selectedOption" required="true">
-                            <aura:iteration items="{!v.languagePickListValues}" var="languageValue">
-                                <option value="{!languageValue}">{!languageValue}</option>
-                            </aura:iteration>
-                        </lightning:select>
-                    </div>
-                    <footer class="slds-modal__footer">
-                        <lightning:button variant="neutral" 
-                                          label="{!$Label.c.BTN_Cancel}"
-                                          title="{!$Label.c.BTN_Cancel}"	
-                                          onclick="{!c.deleteFile}"/>
-                        <lightning:button variant="brand" 
-                                          label="{!$Label.c.SS_Btn_Save}"
-                                          title="{!$Label.c.SS_Btn_Save}"
-                                          onclick="{!c.save}"/>
-                    </footer>
-                </div>
-            </section>
-            <div class="slds-backdrop slds-backdrop_open"></div>
-        </aura:if>         
+        <aura:if isTrue="{!v.fileWrapper.listOfLanguages.length > 0}">
+            <footer class="slds-card__footer">
+                <lightning:select name="{!$Label.c.PG_AH_H_Language}" label="{!$Label.c.PG_AH_H_Language}" aura:id="selectedOption" required="true">
+                    <aura:iteration items="{!v.fileWrapper.listOfLanguages}" var="languageValue">
+                        <option value="{!languageValue}">{!languageValue}</option>
+                    </aura:iteration>
+                </lightning:select>
+                <lightning:fileUpload label="" multiple="false"
+                                      accept="{!v.fileType}" recordId="{!v.recordId}"
+                                      onuploadfinished="{!c.saveFile}" />
+            </footer>
+        </aura:if>
+        <c:RRSpinner aura:id="spinner" size="small"/>
     </article>
+
 </aura:component>
