--- a/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Study_Site__c-Study Site Layout.layout-meta.xml
@@ -91,6 +91,10 @@
                 <behavior>Edit</behavior>
                 <field>Study_Site_Status_Reason__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Account_Was_Changed__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -340,7 +344,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1j000000YqPs</masterLabel>
+        <masterLabel>00hN00000014vF6</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
