--- a/force-app/main/default/aura/SurveyGismoResultsView/SurveyGismoResultsView.cmp
+++ b/force-app/main/default/aura/SurveyGismoResultsView/SurveyGismoResultsView.cmp
@@ -7,11 +7,12 @@
     <aura:attribute name="decodeResults" type="String"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.results}" action="{!c.doInit}"/>
 
     <aura:if isTrue="{!v.decodeResults}">
         <aura:unescapedHtml value="{!v.decodeResults}"/>
         <aura:set attribute="else">
-            <iframe src="{!v.results}" class="screening-gizmo-frame"></iframe>
+                <iframe src="{!v.results}" height="500px" width="100%" allowfullscreen="true"></iframe>
         </aura:set>
     </aura:if>
 </aura:component>
