--- a/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.cmp
+++ b/force-app/main/default/aura/ViewPatientsReferred/ViewPatientsReferred.cmp
@@ -66,7 +66,11 @@
                            sortVariants="{!v.peFilterData.sortVariants}"
                            allRecordsCount="{!v.paginationData.allRecordsCount}"
                            currentPageCount="{!v.paginationData.currentPageCount}">
-
+                <aura:if isTrue="{!v.userMode == 'PI'}">
+                    <c:rrSelect value="{!v.peFilter.activePE}" options="{!v.peFilterData.activePE}"
+                                placeholder="source" useSentenceFont="false"
+                                disabled="{!not(empty(v.peFilter.searchText))}" class="fp-ss-filter-container"/>
+                </aura:if>
                 <aura:if isTrue="{!v.studyFilterEnabled}">
                     <c:rrSelect value="{!v.peFilter.study}" options="{!v.peFilterData.studies}"
                                 placeholder="{!$Label.c.PG_MRRL_L_Studies}" useSentenceFont="false"
@@ -79,12 +83,21 @@
                     <c:rrSelect value="{!v.peFilter.referringStatus}" options="{!v.peFilterData.referringStatuses}"
                                 placeholder="{!$Label.c.PG_VP_L_Referral_status}"
                                 disabled="{!not(empty(v.peFilter.searchText))}"/>
+                    <c:rrSelect value="{!v.peFilter.dateRange}" options="{!v.peFilterData.dateRanges}"
+                                placeholder="{!$Label.c.PG_MRRL_L_Date_range}"
+                                disabled="{!not(empty(v.peFilter.searchText))}"/>
                 </aura:if>
                 <aura:if isTrue="{!v.userMode == 'PI'}">
                     <c:rrSelect value="{!v.peFilter.studySite}" options="{!v.peFilterData.studySites}"
                                 placeholder="{!$Label.c.PG_VP_L_Study_sites}" useSentenceFont="false"
                                 disabled="{!not(empty(v.peFilter.searchText))}" class="fp-ss-filter-container"/>
-                    <c:rrSelect value="{!v.peFilter.referringClinic}" options="{!v.peFilterData.referringClinics}"
+                    <c:rrSelect value="{!v.peFilter.source}" options="{!v.peFilterData.source}"
+                                placeholder="{!$Label.c.PG_VP_L_Source}" useSentenceFont="false"
+                                disabled="{!not(empty(v.peFilter.searchText))}" class="fp-ss-filter-container"/>
+                    <c:rrSelect value="{!v.peFilter.participantStatus}" options="{!v.peFilter.activePE == 'Active' ? v.peFilterData.activeParticipantStatus : v.peFilterData.inactiveParticipantStatus}"
+                                placeholder="{!$Label.c.PG_VP_L_Participant_Status}" useSentenceFont="false"
+                                disabled="{!not(empty(v.peFilter.searchText))}" class="fp-ss-filter-container"/>
+                    <!--<c:rrSelect value="{!v.peFilter.referringClinic}" options="{!v.peFilterData.referringClinics}"
                                 placeholder="{!$Label.c.PG_DBPI_L_Referring_clinics}" useSentenceFont="false"
                                 disabled="{!not(empty(v.peFilter.searchText))}"/>
                     <c:rrSelect value="{!v.peFilter.acceptenceStatus}" options="{!v.peFilterData.acceptenceStatuses}"
@@ -92,11 +105,9 @@
                                 disabled="{!not(empty(v.peFilter.searchText))}"/>
                     <c:rrSelect value="{!v.peFilter.enrollmentStatus}" options="{!v.peFilterData.enrollmentStatuses}"
                                 placeholder="{!$Label.c.PG_SW_F_Enrollment_Status}"
-                                disabled="{!not(empty(v.peFilter.searchText))}"/>
+                                disabled="{!not(empty(v.peFilter.searchText))}"/>-->
                 </aura:if>
-                <c:rrSelect value="{!v.peFilter.dateRange}" options="{!v.peFilterData.dateRanges}"
-                            placeholder="{!$Label.c.PG_MRRL_L_Date_range}"
-                            disabled="{!not(empty(v.peFilter.searchText))}"/>
+
 
                 <!--aura:set attribute="buttons">
                     <button class="apollo-btn tertiary">
