--- a/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.cmp
+++ b/force-app/main/default/aura/ResourceDashboardCardItem/ResourceDashboardCardItem.cmp
@@ -18,7 +18,7 @@
     <!--COMPONENT BODY-->
     <div class="resource-container">
 
-        <c:RRSpinner aura:id="spinner" showSpinner="true" size="medium"/>
+        <c:RRSpinner aura:id="spinner" showSpinner="true" size="small"/>
 
         <aura:if isTrue="{!v.initialized}">
             <div class="resource-title">
