--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -212,7 +212,7 @@
                         <aura:if isTrue="{!v.userMode != 'Participant'}">
                             <div class="title">{!$Label.c.PG_SW_F_Study_Documents}</div>
                             <aura:iteration items="{!v.documents}" var="document">
-                                <div class="text"><a href="{!'/RRPDFViewer?documentId=' + document.documentId}" target="_blank">{!document.title}</a></div>
+                                <div class="text"><a href="{!'/RRPDFViewer?resourceId=' + document.resourceId + '&amp;language=' + document.language}" target="_blank">{!document.title}</a></div>
                             </aura:iteration>
                         </aura:if>
 
