--- a/force-app/main/default/aura/TrialItem/TrialItem.cmp
+++ b/force-app/main/default/aura/TrialItem/TrialItem.cmp
@@ -9,7 +9,18 @@
     <aura:attribute name="participant" type="Participant__c" access="public"/>
     <aura:attribute name="formData" type="Object" access="public"/>
     <aura:attribute name="isDisclaimer" type="Boolean"/>
-    <aura:attribute name="participantInfo" type="Participant__c" default="{'sobjectType':'Participant__c', 'Name':'Account123'}"/>
+    <aura:attribute name="participantInfo" type="Participant__c" default="{'sobjectType':'Participant__c',
+    'First_Name__c':'',
+    'Last_Name__c':'',
+    'Date_of_Birth__c':'',
+    'Gender__c':'',
+    'Phone__c':'',
+    'Phone_Type__c':'',
+    'Email__c':'',
+    'Mailing_Country_Code__c':'',
+    'Mailing_State_Code__c':'',
+    'Mailing_Zip_Postal_Code__c':'',
+    }"/>
     <aura:attribute name="isValid" type="Boolean" default="false"/>
 
 
